<resources>
    <string name="app_name">Github User</string>

    <string name="nama_user">Muhammad Richo Abadinata</string>
    <string name="searchbar_hint">Masukkan user yang dicari</string>
    <string name="back_button">tombol_back</string>
    <string name="detail_user">Detail User</string>
    <string name="username">muh-richo</string>
    <string name="jumlah_followers">157 Followers</string>
    <string name="jumlah_following">127 Following</string>

    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="dark_mode">Dark Mode </string>
    <string name="favourite_button">favouriteButton</string>
</resources>